# Lotter-smart-contract-with-spl-token

./: Anchor.toml  README.md  package.json
programs/lottery-contract-spl-token/: Cargo.toml
programs/lottery-contract-spl-token/src/: constant.rs  context.rs  lib.rs  state.rs
tests/: lottery-contract-spl-token.ts
