[package]
name = "lottery-contract-spl-token"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lottery_contract_spl_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[profile.release]
overflow-checks = true

[dependencies]
anchor-lang = "=0.26.0"
anchor-spl = "0.26.0"
solana-program = "=1.14.12"
num_enum = "=0.5.7"
arrayref = "=0.3.6"

[dev-dependencies]
solana-cli-config = "=1.14.12"
solana-program-test = "=1.14.12"
solana-sdk = "=1.14.12"
tokio = "=1.14.1"
# dependency fix
proc-macro-crate = "=1.2.1"
security-framework = "=2.5.0"
time = "=0.3.15"
zstd-sys = "=2.0.4+zstd.1.5.2"